# search-parser

./: main.ts  readline.ts
.devcontainer/: Dockerfile  devcontainer.json  onstartup.sh
db/: Cargo.toml  buf.gen.yaml
db/src/: lib.rs  main.rs
modules/: kusto.ts  readline.ts
modules/kusto/: parser.ts  pg_query_pb.ts  print.ts  proto.ts  typechecks.ts
