[package]
name = "db"
version = "0.1.0"
edition = "2021"
# build = "build.rs"

[lib]
name = "db"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
deno_bindgen = "0.8.1"
pbjson = "0.7.0"
pbjson-types = "0.7.0"
prost = "0.13.3"
prost-serde = "0.3.0"
serde = {version = "1.0.210", features = ["derive"]}
serde-binary = "0.5.0"
serde_json = "1.0.128"

[build-dependencies]
prost-build = "0.13.3"
protobuf-src = "2.1.0"
pbjson-build = "0.7.0"
